--- a/template/head.html
+++ b/template/head.html
@@ -1,6 +1,6 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<link rel="stylesheet" href="http://nd-hb-test.s3-website-us-east-1.amazonaws.com/frame/flexboxgrid.css">
-<link rel="stylesheet" href="http://nd-hb-test.s3-website-us-east-1.amazonaws.com/frame/fonts.css">
-<link rel="stylesheet" href="http://nd-hb-test.s3-website-us-east-1.amazonaws.com/frame/template.css">
+<link rel="stylesheet" href="https://resources.library.nd.edu/frame/flexboxgrid.css">
+<link rel="stylesheet" href="https://resources.library.nd.edu/frame/fonts.css">
+<link rel="stylesheet" href="https://resources.library.nd.edu/frame/template.css">
 <!--<link rel="stylesheet" href="home.css">-->
