fix hesburgh color in title

--- a/template/home.css
+++ b/template/home.css
@@ -27,6 +27,10 @@
 	display: none;
 }
 
+a.hlhome {
+  color: #fff;
+  text-decoration: none;
+}
 .hlhome {
 	padding: 32px 0 30px;
 }
@@ -68,8 +72,3 @@
 .hlhome span {
 	bottom: 1.2em;
 }
-
-
-
-
-
