--- a/template/template.css
+++ b/template/template.css
@@ -204,6 +204,9 @@ a {
   z-index: 10;
   position: relative;
 }
+.uNavigation a, .uNavigation a:hover {
+  text-decoration: none;
+}
 
 nav > .container-fluid {
   display: block;
