--- a/template/header.html
+++ b/template/header.html
@@ -9,21 +9,21 @@
   </div>
   <div id="banner">
     <div class="container-fluid">
-      <a href="https://beta.library.nd.edu/" class="hlhome">Hesburgh <em>Libraries</em></a>
+      <a href="https://library.nd.edu/" class="hlhome">Hesburgh <em>Libraries</em></a>
     </div>
   </div>
   <div class="nav-search">
     <div class="uNavigation">
       <nav class="container-fluid menu-list" aria-label="Main Navigation">
-        <div class="menu-link"><a href="https://beta.library.nd.edu/">Home</a></div>
-        <div class="menu-link" tabindex="0"><a id="research" href="https://beta.library.nd.edu/research">Research</a></div>
-        <div class="menu-link" tabindex="0"><a id="services" href="https://beta.library.nd.edu/services">Services</a></div>
-        <div class="menu-link" tabindex="0"><a id="libraries" href="https://beta.library.nd.edu/libraries">Libraries</a></div>
-        <div class="menu-link" tabindex="0"><a id="about" href="https://beta.library.nd.edu/about">About</a></div>
+        <div class="menu-link"><a href="https://library.nd.edu/">Home</a></div>
+        <div class="menu-link" tabindex="0"><a id="research" href="https://library.nd.edu/research">Research</a></div>
+        <div class="menu-link" tabindex="0"><a id="services" href="https://library.nd.edu/services">Services</a></div>
+        <div class="menu-link" tabindex="0"><a id="libraries" href="https://library.nd.edu/libraries">Libraries</a></div>
+        <div class="menu-link" tabindex="0"><a id="about" href="https://library.nd.edu/about">About</a></div>
         {{{ADDITIONAL_LINKS}}}
         <div class="right">
           <div class="menu-link user"><a class="m" href="https://viceroy.library.nd.edu/login">Login</a></div>
-          <div class="menu-link hours-m"><a class="m" href="https://beta.library.nd.edu/hours">Hours</a></div>
+          <div class="menu-link hours-m"><a class="m" href="https://library.nd.edu/hours">Hours</a></div>
         </div>
       </nav>
     </div>
