--- a/template/header.html
+++ b/template/header.html
@@ -1,12 +1,4 @@
 <div class="top">
-  <div id="wrapper">
-    <header class="gtype blue container-fluid" role="banner" id="header">
-      <hgroup>
-        <h3 class="nddotedu"><a href="http://nd.edu">University <i>of</i> Notre Dame</a></h3>
-        <h2 class="dept-prov"><a href="http://provost.nd.edu">Office <i>of the</i> Provost</a></h2>
-      </hgroup>
-    </header>
-  </div>
   <div id="banner">
     <div class="container-fluid">
       <a href="https://library.nd.edu/" class="hlhome">Hesburgh <em>Libraries</em></a>
@@ -22,8 +14,8 @@
         <div class="menu-link" tabindex="0"><a id="about" href="https://library.nd.edu/about">About</a></div>
         {{{ADDITIONAL_LINKS}}}
         <div class="right">
-          <div class="menu-link user"><a class="m" href="https://viceroy.library.nd.edu/login">Login</a></div>
-          <div class="menu-link hours-m"><a class="m" href="https://library.nd.edu/hours">Hours</a></div>
+          <div class="menu-link user"><a href="https://viceroy.library.nd.edu/login">Login</a></div>
+          <div class="menu-link hours-m"><a href="https://library.nd.edu/hours">Hours</a></div>
         </div>
       </nav>
     </div>
