--- a/template/footer.html
+++ b/template/footer.html
@@ -5,12 +5,12 @@
         <div class="col-xs-7">
           <div class="box">
             <ul>
-              <li><a href="https://nd.service-now.com/ess/create_lib_incident.do" target="_blank">Website Feedback</a></li>
+              <li><a href="https://nd.service-now.com/nd_portal?id=sc_cat_item&sys_id=1198d67ddb4a7240de73f5161d961936&lib_list_problem=lib_list_web_content" target="_blank">Website Feedback</a></li>
               <li><a href="http://library.nd.edu/library-policies" target="_blank">Library Policies</a></li>
               <li><a href="http://librarygiving.nd.edu" target="_blank">Library Giving</a></li>
               <li><a href="http://library.nd.edu/">Jobs</a></li>
               <li><a href="https://wiki.nd.edu/display/libintranet/Home" target="_blank">Hesnet</a></li>
-              <li><a href="https://nd.service-now.com/ess/create_lib_incident.do" target="_blank">Report a Problem</a></li>
+              <li><a href="https://nd.service-now.com/nd_portal?id=sc_cat_item&sys_id=1198d67ddb4a7240de73f5161d961936" target="_blank">Report a Problem</a></li>
             </ul>
           </div>
         </div>
