--- a/template/header.html
+++ b/template/header.html
@@ -2,6 +2,7 @@
   <div id="banner">
     <div class="container-fluid">
       <a href="https://library.nd.edu/" class="hlhome">Hesburgh <em>Libraries</em></a>
+      {{{ADDITIONAL_TITLES}}}
     </div>
   </div>
   <div class="nav-search">
