- Added extra titles example - Fixed the mangle to exclude the .href and .title properties that are being passed into the documentReady function - Changed the structure of the additional titles a bit so that the class names are part of the header.html, not injected by the code, so that they will get properly mangled.

--- a/template/header.html
+++ b/template/header.html
@@ -2,7 +2,9 @@
   <div id="banner">
     <div class="container-fluid">
       <a href="https://library.nd.edu/" class="hlhome">Hesburgh <em>Libraries</em></a>
-      {{{ADDITIONAL_TITLES}}}
+      <div class="subtitle">
+        {{{ADDITIONAL_TITLES}}}
+      </div>
     </div>
   </div>
   <div class="nav-search">
