--- a/template/template.css
+++ b/template/template.css
@@ -63,11 +63,6 @@ a {
   color: #93601D;
 }
 
-a.subtitle {
-  color: #fff !important;
-  text-decoration: none !important;
-}
-
 a.hlhome {
   color: #fff !important;
   text-decoration: none !important;
@@ -497,13 +492,17 @@ body.gold-blue #header h4 a {
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
-  padding-right: 20px;
+  padding-right: 50px;
   padding-left: 20px;
   font-size: 28px;
   font-family: GPCMed, sans-serif;
   text-transform: uppercase;
 }
 
+.subtitle > div a {
+  color: #fff !important;
+  text-decoration: none !important;
+}
 
 .hlhome {
   font-size: 38px;
@@ -863,7 +862,7 @@ button a {
 }
 
 
-#content { 
+#content {
   /*margin-left: auto;
   margin-right: auto;
   max-width: 1200px;
