--- a/template/footer.html
+++ b/template/footer.html
@@ -17,8 +17,8 @@
         <div class="col-xs-4 col-xs-offset-2">
           <div class="box right">
             <ul>
-              <li><a href="http://twitter.com/ndlibraries" target="_blank"><img src="https://resources.library.nd.edu/frame/images/twitter.png"> NDLibraries</a></li>
-              <li><a href="https://www.facebook.com/ndlibraries/" target="_blank"><img src="https://resources.library.nd.edu/frame/images/facebook.png"> NDLibraries</a></li>
+              <li><a href="http://twitter.com/ndlibraries" target="_blank"><img src="https://resources.library.nd.edu/frame/images/twitter.png" alt="Twitter"> NDLibraries</a></li>
+              <li><a href="https://www.facebook.com/ndlibraries/" target="_blank"><img src="https://resources.library.nd.edu/frame/images/facebook.png" alt="Facebook"> NDLibraries</a></li>
             </ul>
           </div>
         </div>
@@ -40,7 +40,7 @@
         </div>
         <div class="col-xs-12 col-md-4">
           <div class="box right">
-            <img src="https://resources.library.nd.edu/frame/images/logo.png" class="flogo">
+            <img src="https://resources.library.nd.edu/frame/images/logo.png" class="flogo" alt="Hesburgh Library Logo">
           </div>
         </div>
       </div>
