--- a/template/fonts.css
+++ b/template/fonts.css
@@ -46,11 +46,11 @@
   src: url('https://www.nd.edu/assets/fonts/GalaxiePolarisCondensed-Heavy.eot?iefix') format('embedded-opentype'), url('https://www.nd.edu/assets/fonts/GalaxiePolarisCondensed-Heavy.woff') format('woff'), url('https://www.nd.edu/assets/fonts/GalaxiePolarisCondensed-Heavy.ttf') format('truetype'), url('https://www.nd.edu/assets/fonts/GalaxiePolarisCondensed-Heavy.svg#svgGPCHeavy') format('svg');
 }*/
 
-@font-face {
+/*@font-face {
   font-family: GPCHeavy;
   src: url('https://static.nd.edu/fonts/gp-min/gpc-heavy.woff2');
   src:url("https://static.nd.edu/fonts/gp-min/gpc-heavy.woff2") format("woff2"),url("https://static.nd.edu/fonts/gp-min/gpc-heavy.woff") format("woff"),url("https://static.nd.edu/fonts/gp-min/gpc-heavy.ttf") format("truetype")
-}
+}*/
 
 /*@font-face {
   font-family: GPMed;
