# 50-character subject line # # 72-character wrapped longer description. This should answer: # # * Why was this change necessary? # * How does it address the problem? # * Are there any side effects? # # Include a link to the ticket, if any.

--- a/template/template.css
+++ b/template/template.css
@@ -232,8 +232,8 @@ nav div, .menu div {
 nav div > a, .menu div > a, .menu-list li a {
   text-decoration: none;
   text-transform: uppercase;
-  color: #555555;
-  font-size: 13px;
+  color: #555555 !important;
+  font-size: 13px !important;
   font-family: GPHeavy, sans-serif;
   letter-spacing: 1.5px;
   padding: 15px 19px 15px;
