--- a/template/footer.html
+++ b/template/footer.html
@@ -14,7 +14,7 @@
             </ul>
           </div>
         </div>
-        <div class="col-xs-4 col-xs-offset-2">
+        <div class="col-xs-4">
           <div class="box right">
             <ul>
               <li><a href="http://twitter.com/ndlibraries" target="_blank"><img src="https://resources.library.nd.edu/frame/images/twitter.png" alt="Twitter"> NDLibraries</a></li>
