--- a/template/footer.html
+++ b/template/footer.html
@@ -10,6 +10,7 @@
               <li><a href="http://librarygiving.nd.edu" target="_blank">Library Giving</a></li>
               <li><a href="http://library.nd.edu/">Jobs</a></li>
               <li><a href="https://nd.service-now.com/nd_portal?id=sc_cat_item&sys_id=1198d67ddb4a7240de73f5161d961936" target="_blank">Report a Problem</a></li>
+              <li><a label="Federal Depository Library" href="/government-documents"><img src="https://resources.library.nd.edu/frame/images/fdlp-emblem-color.png" class="gov" alt="Logo of Federal Depository Library Project"></a></li>
             </ul>
           </div>
         </div>
@@ -29,9 +30,9 @@
       <div class="row">
         <div class="col-xs-12 col-md-4">
           <div class="box">
-            <p>Copyright &copy; 2017 University of Notre Dame</p>
+            <p><a href="https://www.nd.edu/copyright/" target="_blank">Copyright</a> &copy; 2019 University of Notre Dame</p>
             <p><a href="https://www.google.com/maps/place/Theodore+M.+Hesburgh+Library/@41.7023619,-86.2363832,17z/data=!3m1!4b1!4m5!3m4!1s0x8816d29f1af60a29:0x87f74f541c574744!8m2!3d41.7023579!4d-86.2341945">284 Hesburgh Library, Notre Dame, IN 46556</a> </p>
-            <p><a href="tel:5746316679">(574) 631-6679</a></p>
+            <p>Phone <a href="tel:5746316679">(574) 631-6679</a></p>
           </div>
         </div>
         <div class="col-xs-12 col-md-4">
