Implement alerts. Improve dev environment.

--- a/template/footer.html
+++ b/template/footer.html
@@ -10,15 +10,15 @@
               <li><a href="http://librarygiving.nd.edu" target="_blank">Library Giving</a></li>
               <li><a href="http://library.nd.edu/">Jobs</a></li>
               <li><a href="https://nd.service-now.com/nd_portal?id=sc_cat_item&sys_id=1198d67ddb4a7240de73f5161d961936" target="_blank">Report a Problem</a></li>
-              <li><a label="Federal Depository Library" href="/government-documents"><img src="https://resources.library.nd.edu/frame/images/fdlp-emblem-color.png" class="gov" alt="Logo of Federal Depository Library Project"></a></li>
+              <li><a label="Federal Depository Library" href="https://library.nd.edu/government-documents"><img src="{{{DRAPES_TEMPLATE_ROOT}}}/images/fdlp-emblem-color.png" class="gov" alt="Logo of Federal Depository Library Project"></a></li>
             </ul>
           </div>
         </div>
         <div class="col-xs-4">
           <div class="box right">
             <ul>
-              <li><a href="http://twitter.com/ndlibraries" target="_blank"><img src="https://resources.library.nd.edu/frame/images/twitter.png" alt="Twitter"> NDLibraries</a></li>
-              <li><a href="https://www.facebook.com/ndlibraries/" target="_blank"><img src="https://resources.library.nd.edu/frame/images/facebook.png" alt="Facebook"> NDLibraries</a></li>
+              <li><a href="http://twitter.com/ndlibraries" target="_blank"><img src="{{{DRAPES_TEMPLATE_ROOT}}}/images/twitter.png" alt="Twitter"> NDLibraries</a></li>
+              <li><a href="https://www.facebook.com/ndlibraries/" target="_blank"><img src="{{{DRAPES_TEMPLATE_ROOT}}}/images/facebook.png" alt="Facebook"> NDLibraries</a></li>
             </ul>
           </div>
         </div>
@@ -40,7 +40,7 @@
         </div>
         <div class="col-xs-12 col-md-4">
           <div class="box right">
-            <img src="https://resources.library.nd.edu/frame/images/logo.png" class="flogo" alt="Hesburgh Library Logo">
+            <img src="{{{DRAPES_TEMPLATE_ROOT}}}/images/logo.png" class="flogo" alt="Hesburgh Library Logo">
           </div>
         </div>
       </div>
