--- a/template/header.html
+++ b/template/header.html
@@ -7,6 +7,7 @@
       </div>
     </div>
   </div>
+  {{{ALERTS}}}
   <div class="nav-search">
     <div class="uNavigation">
       <nav class="container-fluid menu-list" aria-label="Main Navigation">
