Fix html muncher destroying js because it thinks it's html or something. Had to put css and html in their own directories to make this work. Munching either works on an entire directory or individual files, so the alternative would have been to specify each css and html file individually.

--- a/template/css/home.css
+++ b/template/css/home.css
@@ -32,7 +32,7 @@
 }
 
 #banner .container-fluid {
-	background-image: url('images/jesus.2.png');
+	background-image: url('../images/jesus.2.png');
 }
 
 #banner {
