--- a/template/html/index.html
+++ b/template/html/index.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title></title>
-  <link rel="stylesheet" href="flexboxgrid.css">
-  <link rel="stylesheet" href="template.css">
-  <link rel="stylesheet" href="home.css">
+  <link rel="stylesheet" href="../css/flexboxgrid.css">
+  <link rel="stylesheet" href="../css/template.css">
+  <link rel="stylesheet" href="../css/home.css">
 </head>
 <body>
 <div class="top">
@@ -23,7 +23,7 @@
   <div id="banner">
     <div class="container-fluid">
       <a href="/" class="hlhome">Hesburgh <em>Libraries</em></a>
-      
+
 
 
     </div>
@@ -45,15 +45,15 @@ test
         <div class="box">
           <ul>
             <li><a href="#">&nbsp;</a></li>
-           
+
           </ul>
         </div>
       </div>
-      
+
       <div class="col-xs-4 col-xs-offset-2">
         <div class="box right">
           <ul><li><a href="http://twitter.com/ndlibraries" target="_blank"><img src="images/twitter.png"> NDLibraries</a></li>
-                    
+
                     <li><a href="https://www.facebook.com/ndlibraries/" target="_blank"><img src="images/facebook.png"> NDLibraries</a></li></ul>
         </div>
       </div>
@@ -89,6 +89,6 @@ test
 
 </div>
 
-  
+
 </body>
 </html>
