--- a/template/css/template.css
+++ b/template/css/template.css
@@ -1244,10 +1244,17 @@ label[for='sp'] {
   align-items: center;
 }
 
-.alert-container .alert-description {
+.alert-container .alert-description,
+.alert-container .alert-description p {
+  font-size: 16px;
+  font-family: sans-serif;
   flex: 1 1 auto;
   line-height: normal;
   max-width: 100%;
   margin: 0;
   overflow: hidden;
+}
+
+.alert-container .alert-description p:not(:last-of-type) {
+  margin-bottom: 0.5em;
 }
